# xdxf_makedict

./: AUTHORS  CHANGELOG  CHANGELOG.md  CMakeLists.txt  ChangeLog  Doxyfile.in  INSTALL  Makefile.am  README  README.CVS  README.md  TODO  aclocal.m4  config.h  config.h.cmake  config.h.in  config.status  configure  configure.ac
cmake/: FindGLIB2.cmake
dict_samples/: dictionary_one-to-many_languages_rev34.xml  rev33.xml
docs/: Makefile.am  makedict.1
format_standard/: README.md  xdxf_description.md  xdxf_format.txt  xdxf_lousy.dtd  xdxf_strict.dtd
m4/: Makefile.am  expat.m4
mvsc/: Makefile.am  config.h  makedict.sln  makedict.vcproj
sample-dicts/: rev34.xml
src/: Makefile.am  apresyan.py  charset_conv.cpp  charset_conv.hpp  compiler.hpp  connector.cpp  connector.hpp  dictd_generator.cpp  dictd_parser.cpp  dsl_ipa.cpp  dsl_ipa_tbl.txt  dsl_parser.cpp  dummy_generator.cpp  dummy_parser.cpp  file.cpp  file.hpp  generator.cpp  generator.hpp  ipa_tbl_to_cpp.sh  iso_639_2_tbl_to_cpp.py  lang_tbl.cpp  lang_tbl.hpp  lang_tbl_auto.cpp  langs_2to3.cpp  langs_2to3.hpp  log.cpp  log.hpp  makedict.cpp  mapfile.cpp  mapfile.hpp  mdparser.py  mueller7_parser.py  normalize_tags.cpp  normalize_tags.hpp  parser.cpp  parser.hpp  process.cpp  process.hpp  repository.hpp  resource.hpp  (+10 more)
tests/: CMakeLists.txt  Makefile.am  funcs.sh  makedict_options  normalize.cpp  t_convert_all.sh  t_dslparser  t_dslparser.sh  t_dummy  t_dummy.sh  t_generator  t_generator.sh  t_generator_error.sh  t_normalize  t_normalize.cpp  t_parser_error.sh  t_parser_options.sh  t_perfomance.sh  t_sdict_parser  t_sdict_parser.sh  t_stardict  t_stardict.sh  t_stardict_parser.sh  t_xdxfgenerator  t_xdxfgenerator.sh  t_xml.cpp  validate_stardict.cpp
tests/dtd/: Makefile.am  xdxf_lousy.dtd
tests/sample-dicts/: Makefile.am  col_param.dsl  col_param_std.dummy  dsl_transc.dsl  dsl_transc_std.dummy  dummy_simple_input.txt  dummy_simple_output.txt  opt_nu.dsl  opt_nu_std.dummy  opt_tag.xdxf  opt_tag_dummy_standard.txt  parser_options_std.xdxf  quote_amp_etc.xdxf  quote_amp_etc_standard.dummy  ref_param.dsl  ref_param_std.dummy  right_tag_order.dsl  right_tag_order_std.dummy  sample1.dct  sample1_sdict_std.xdxf  sample2.dct  sample2_sdict_std.xdxf  skip_comments.dsl  skip_comments_dsl_std.dummy  stardict-dummy.dict  stardict-dummy.idx  stardict-dummy.ifo  tag_attribute.xdxf  tag_attribute_standard.dummy  xdxfgenerator_test1.xdxf  xdxfgenerator_test1_std.xdxf
