EXTRA_DIST = \
dummy_simple_input.txt \
dummy_simple_output.txt \
opt_tag_dummy_standard.txt \
opt_tag.xdxf \
quote_amp_etc_standard.dummy \
quote_amp_etc.xdxf \
tag_attribute_standard.dummy \
tag_attribute.xdxf \
xdxfgenerator_test1.xdxf xdxfgenerator_test1_std.xdxf \
ref_param.dsl ref_param_std.dummy \
skip_comments.dsl skip_comments_dsl_std.dummy \
right_tag_order.dsl right_tag_order_std.dummy \
col_param.dsl col_param_std.dummy \
dsl_transc.dsl dsl_transc_std.dummy \
parser_options_std.xdxf \
sample1.dct sample1_sdict_std.xdxf
